syntax = "proto3";

package todoPackage;

service Todo {

  rpc createTodo(TodoItem) returns (TodoItem);
  // has to take some sort of param
  rpc readTodos(noParam) returns (TodoItems);
}

message noParam {}

message TodoItem {
  int32 id = 1;
  string text = 2;
}

message TodoItems {
  repeated TodoItem items = 1;
}